# ReYMeN-Ajan

./: .ReYMeN_sync.sh  ._README_steering_loop.md  .env.example  .gitignore  .hermes_sync_log.md  AGENTS.md  AI Guidelines.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  FIX_RAPORU.md  KAPSAMLI_TARAMA_RAPORU.md  LICENSE  MIGRATION.md  Makefile  Memory Bank.md  PROJE_DURUMU.md  Proje Amaçları.md  README.md  ReYMeN.bat  ReYMeN_constants.py  ReYMeN_logging.py  SINIRLAR_VE_BOSLUKLAR_ANALIZI.md  SKILL_DEDUP_RAPORU.md  TASK_5N1K_REYMEN_ANALIZ.md  _check.py  _fix_skills_imports.py  _move_skills.sh  _move_skills_v2.sh  _seen_errors.json  _upd_key.py  _upd_xiaomi.py  _update_xiaomi.py  _verify.py  ai_guidelines.md  audit_llm_agent_raporu.txt  beyin.json  beyin.py  cli.py  cokus_raporlayici.py  (+46 more)
.ReYMeN/: INDEX.md  KARSILASTIRMA.md  KARSILASTIRMA_DERIN.md  KARSILASTIRMA_DERIN_20260620.md  MEMORY.md  SOUL.md  USER.md  ai_bot_ayarlari.json  analiz_motor.md  beceri_kutuphanesi.json  claude_eksikler_2_tur.md  credentials.enc  decisions.md  fix_beceri.py  hafiza.json  hata_cozumleri.md  hermes_skill_listesi.json  kazanimlar.md  kullanici_tercihleri.json  mcp_catalog.json  mcp_oauth.json  md_envanter.md  memory_taxonomy_5n1k.md  mimari_motor.md  oz_yansima_log.md  pairing.json  prompt_gelistirme_log.md  reflexion_log.jsonl  setup.json  sistem_ekleri.md
.claude/: gorev1_bot_agent_baglantisi.md  gorev2_anayasa_gevsemesi.md  gorev3_kopru_env_fix.md  settings.json
.kopru/: sonuc_test001.json  sonuc_test002.json
.profile_backup/: .hermes_history  .restart_last_processed.json  .skills_prompt_snapshot.json  .update_check  SOUL.md  auth.json  baslat_reymen_gateway.bat  channel_directory.json  config.yaml  config_backup_20260624_184025.yaml  context_length_cache.yaml  decisions.md  gateway_state.json  models_dev_cache.json  ollama_cloud_models_cache.json  provider_models_cache.json  state.db-shm  state.db-wal  system_prompt.json
.profile_snapshot/: auth.json  config.yaml
ReYMeN_cli/: __init__.py  _parser.py  _subprocess_compat.py  active_sessions.py  agent.py  auth.py  auth_commands.py  auto_setup.py  azure_detect.py  backup.py  banner.py  benchmarks.py  blueprint_cmd.py  broadcast.py  browser.py  browser_connect.py  build_info.py  bundles.py  cache.py  callbacks.py  callbacks_cli.py  checkpoints.py  claw.py  cli_output.py  clipboard.py  codex_models.py  codex_runtime_plugin_migration.py  codex_runtime_switch.py  colors.py  commands.py  completion.py  compliance.py  components.py  config.py  container_boot.py  copilot_auth.py  cron.py  curator.py  curator_cli.py  curses_ui.py  (+127 more)
_backup_20260624_224529/: config.yaml
_cleanup_backup_2026_06_23/: _model_benchmark.py  _model_check.py  _web_tetikleyici.py  discord.py.bak  fts5_perf_test.py  run_tests_batched.py  run_tests_v2.py  temp_count.py  test_100soru.py  test_bulk_5000.py  test_hizli.py  test_main_orchestrator.py.bak  webhook.py.bak  wecom_crypto.py.bak  whatsapp.py.bak  whatsapp_common.py.bak
acp/: schema.py
acp_adapter/: entry.py  server.py  session.py
agent/: auxiliary_client.py  conversation_loop.py  nous_rate_guard.py  prompt_builder.py  voice_agent.py
cron/: cleanup_job.py  jobs.py  reymen_watchdog.py  scheduler.py  suggestions.py
dashboard/: app.py
desktop/: main.js  package.json  python_bridge.py
gateway/: channel_directory.py  config.py  hooks.py  kanban_watchers.py  memory_monitor.py  pairing.py  platform_registry.py  run.py  shutdown_forensics.py  sticker_cache.py  stream_consumer.py  whatsapp_identity.py
providers/: __init__.py  plugin_base.py
proxy/: proxy_config.py  proxy_engine.py
reymen/: .cycle_state.json  __init__.py  __main__.py  cron_state.json  setup.json
rl_observation/: rl_mab_engine.py  rl_skill_logger.py
scripts/: benchmark_browser_eval.py  build_skills_index.py  drift_check_cron.py  duplicate_module_detector.py  duplicate_module_detector_basic.py  env_validator.py  reymen_gecmis_import.py  sorun_coz.py
tests/: conftest.py  (+34 more)
(+5685 files in other folders)
