[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reymen-agent"
version = "0.1.0"
description = "ReYMeN Agent — Otonom AI asistan, hafıza destekli multi-provider ajan sistemi"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["ai-agent", "telegram-bot", "automation", "hermes", "multi-provider"]
authors = [
    { name = "Marko/Q!", email = "reymen@example.com" },
]

# Ana bağımlılıklar (requirements.txt'den toplanmış)
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "playwright>=1.40.0",
]

# Geliştirici bağımlılıkları
[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
ocr = [
    "easyocr>=1.7.0",
]
web = [
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
]
image = [
    "pillow>=10.0.0",
    "fal-client>=0.4.0",
]
ml = [
    "numpy>=1.24.0",
]

# CLI entry point
[project.scripts]
reymen = "reymen.sistem.main:main"

# Hatchling build config
[tool.hatch.build.targets.wheel]
packages = ["reymen", "ReYMeN_cli"]

# Ruff (linter + formatter)
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # line-too-long (zaten 100 var)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Pytest
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "-v --tb=short"
markers = [
    "slow: yavas testler (atlamak icin: -m 'not slow')",
    "integration: entegrasyon testleri",
    "e2e: uctan-uca testler",
]

# Coverage
[tool.coverage.run]
source = ["reymen", "ReYMeN_cli"]
omit = [
    "*/test_*",
    "*/__pycache__/*",
    "*/tests/*",
    "*/venv/*",
    "*/.ReYMeN/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]

# Mypy
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "reymen.sistem.credential_persistence",
    "reymen.ag.*",
    "reymen.arac.*",
]
ignore_errors = true
